<resources>
    <string name="app_name">Artist\'s Apprentice</string>
    <string name="title_workshop">Atelier</string>
    <string name="title_upgrades">Upgrades</string>
    <string name="title_main">Palette</string>

    <string name="camera_permission_needed_dialog">Camera access is needed to play this game. The app does not save the
        images from camera, it is only used for on-the-fly detection of colours visible.</string>

    <string name="button_ok">OK</string>

    <string name="cd_paintbucket_red">Paint bucket: red</string>
    <string name="cd_paintbucket_green">Paint bucket: green</string>
    <string name="cd_paintbucket_blue">Paint bucket: blue</string>
    <string name="cd_aimcross">Aim cross</string>
    <string name="cd_current_painting">Current painting</string>

    <string name="filltext">%1$.1f / %2$.1f</string>
    <string name="filltext_default">0.0 / 1.0</string>
    <string name="gaintext">+%1$.1f/s</string>
    <string name="gaintext_default">+0.0/s</string>
    <string name="workshop_bring_paint_button">Bring paint</string>
    <string name="workshop_collect_wages_button_default">Collect your wages: 0 gp</string>
    <string name="workshop_collect_wages_button">Collect your wages: %1$d gp</string>
    <string name="workshop_view_gallery_button">View gallery</string>

    <string name="coins_display"> %d gp</string>

    <string name="credits_title">Credits</string>
    <string name="credits_text">Pixel arts from:\n
    <a href="https://helianthus-games.itch.io/pixel-art-planets">https://helianthus-games.itch.io/pixel-art-planets</a>\n
    <a href="https://ghostpixxells.itch.io/pixelfood">https://ghostpixxells.itch.io/pixelfood</a>\n
    <a href="https://alexs-assets.itch.io/16x16-rpg-item-pack">https://alexs-assets.itch.io/16x16-rpg-item-pack</a>\n
    <a href="https://gwalker76.itch.io/8x8-pixel-assets">https://gwalker76.itch.io/8x8-pixel-assets</a></string>

</resources>
