<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main">

    <fragment
        android:id="@+id/navigation_workshop"
        android:name="pl.edu.pwr.lab3.i238162.ui.home.WorkshopFragment"
        android:label="@string/title_workshop"
        tools:layout="@layout/fragment_workshop" />

    <fragment
        android:id="@+id/navigation_upgrades"
        android:name="pl.edu.pwr.lab3.i238162.ui.dashboard.UpgradesFragment"
        android:label="@string/title_upgrades"
        tools:layout="@layout/fragment_upgrades" />

    <fragment
        android:id="@+id/navigation_main"
        android:name="pl.edu.pwr.lab3.i238162.ui.notifications.MainFragment"
        android:label="@string/title_main"
        tools:layout="@layout/fragment_main" />
</navigation>
