<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <androidx.camera.view.PreviewView
        android:id="@+id/camera_preview_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.camera.view.PreviewView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_aimcross"
        android:src="@drawable/aim_cross"
        app:layout_constraintBottom_toBottomOf="@id/camera_preview_view"
        app:layout_constraintEnd_toEndOf="@id/camera_preview_view"
        app:layout_constraintStart_toStartOf="@id/camera_preview_view"
        app:layout_constraintTop_toTopOf="@+id/camera_preview_view" />

    <ImageView
        android:id="@+id/visible_colour_preview"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/camera_preview_view"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bucket_height"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp">


            <ImageView
                android:id="@+id/fillrect_red"
                android:layout_width="@dimen/bucket_width"
                android:layout_height="50dp"
                android:background="#E91E63"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/paintbucket_red"
                android:layout_width="@dimen/bucket_width"
                android:layout_height="@dimen/bucket_height"
                android:contentDescription="@string/cd_paintbucket_red"
                android:src="@drawable/paint_barrel_tmp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="#F44336" />

            <TextView
                android:id="@+id/filltext_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:shadowColor="@color/black"
                android:shadowRadius="5"
                android:text="@string/filltext_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/gaintext_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:shadowColor="#000000"
                android:shadowRadius="5"
                android:text="@string/gaintext_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp">

            <ImageView
                android:id="@+id/fillrect_green"
                android:layout_width="@dimen/bucket_width"
                android:layout_height="10dp"
                android:background="#4CAF50"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/paintbucket_green"
                android:layout_width="@dimen/bucket_width"
                android:layout_height="@dimen/bucket_height"
                android:contentDescription="@string/cd_paintbucket_red"
                android:src="@drawable/paint_barrel_tmp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="#8BC34A" />

            <TextView
                android:id="@+id/filltext_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:shadowColor="@color/black"
                android:shadowRadius="5"
                android:text="@string/filltext_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/gaintext_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:shadowColor="#000000"
                android:shadowRadius="5"
                android:text="@string/gaintext_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp">

            <ImageView
                android:id="@+id/fillrect_blue"
                android:layout_width="@dimen/bucket_width"
                android:layout_height="100dp"
                android:background="#3F51B5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/paintbucket_blue"
                android:layout_width="@dimen/bucket_width"
                android:layout_height="@dimen/bucket_height"
                android:contentDescription="@string/cd_paintbucket_red"
                android:src="@drawable/paint_barrel_tmp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="#2196F3" />

            <TextView
                android:id="@+id/filltext_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:shadowColor="@color/black"
                android:shadowRadius="5"
                android:text="@string/filltext_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/gaintext_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:shadowColor="#000000"
                android:shadowRadius="5"
                android:text="@string/gaintext_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
